--- a/css/style.css
+++ b/css/style.css
@@ -44,56 +44,158 @@ table {
 body{
     height: 100%;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    background: linear-gradient(to left,#2193b0,#6dd5ed);
 }
 .wrapper{
 
 }
 .container{
-    max-width: 1180px;
+    max-width: 1237px;
     margin: 0px auto;
     padding: 0px 10px;
 }
-.header{
+
+header{
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
+    border-bottom: 3px solid #c0d2de;
     z-index: 50;
 }
-.header:before{
+header:before{
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: darkblue;
+    background: linear-gradient(to left,#2193b0,#6dd5ed);
+
+
 }
 .header__body{
     position: relative;
-    z-index: 2;
+
     display: flex;
     justify-content: space-between;
     height: 80px;
     align-items: center;
+
 }
 .header__list{
  display: flex;
+    position: relative;
+
  }
 .header__list li{
     list-style: none;
+    margin: 0px 0px 0px 20px;
 }
 .header__link {
     color: #fff;
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 16px;
     text-decoration: none;
 }
 .header__logo{
-    width: 400px;
-    margin-bottom: 40px;
-    height: auto;
+    flex: 0 0 200px;
+    display: block;
 }
 .header__logo img{
     max-width: 100%;
 }
+.header__burger{
+    display: none;
+}
+.content{
+    padding: 100px 0 0 0;
+}
+.content__text{
+    font-size: 18px;
+    line-height: 25px;
+}
+.content__text p{
+    margin: 0 0 20px 0;
+}
+@media (max-width: 767px) {
+    .header__body{
+        height: 50px;
+    }
+    .header__burger{
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+
+    }
+    .header__burger span{
+        position: absolute;
+        background-color: #fff;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        top: 9px;
+        transition: all 0.3s ease 0s;
+    }
+    .header__burger:before,
+    .header__burger:after{
+        content: '';
+        background-color: #fff;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        transition: all 0.3s ease 0s;
+    }
+
+    body.lock{
+        overflow: hidden;
+
+        background: rgb(33, 147, 176);
+
+    }
+    .header__burger:before{
+        top: 0;
+    }
+    .header__burger:after{
+        bottom: 0;
+    }
+    .header__burger.active span{
+    transform: scale(0);
+    }
+    .header__burger.active:before{
+    transform: rotate(45deg);
+        top: 9px;
+    }
+    .header__burger.active:after{
+        transform: rotate(-45deg);
+        bottom: 9px;
+    }
+    .header__menu{
+    position: fixed;
+        top: 53px;
+        right: -120%;
+        width: 30%;
+        height: 100%;
+        transition: all 0.3s ease 0s;
+        overflow: auto;
+        opacity: 90%;
+        background: linear-gradient(#2193b0,#6dd5ed);
+        padding: 50px 10px 20px 10px;
+        z-index: -1;
+    }
+    .header__menu.active{
+        right: -2%;
+    }
+    .header__list{
+        display: block;
+    }
+    .header__list li{
+        margin: 0 0 20px 0;
+    }
+    .content{
+        padding: 60px 0 0 0;
+    }
+}
+
