--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ header:before{
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to left,#2193b0,#6dd5ed);
+    background: linear-gradient(to left,#2193b0,#6dd5ed) no-repeat;
 
 
 }
@@ -108,16 +108,10 @@ header:before{
 .header__burger{
     display: none;
 }
-.content{
-    padding: 100px 0 0 0;
-}
-.content__text{
-    font-size: 18px;
-    line-height: 25px;
-}
-.content__text p{
-    margin: 0 0 20px 0;
-}
+
+
+
+
 @media (max-width: 767px) {
     .header__body{
         height: 50px;
@@ -194,8 +188,6 @@ header:before{
     .header__list li{
         margin: 0 0 20px 0;
     }
-    .content{
-        padding: 60px 0 0 0;
-    }
+
 }
 
