--- a/css/style.css
+++ b/css/style.css
@@ -190,4 +190,69 @@ header:before{
     }
 
 }
+/*//////////////////*/
+
+.content{
+    padding: 100px 0 0 0;
+
+}
+.content__text {
+    position: absolute;
+    height: 128px;
+    left: 25%;
+    right: 0%;
+    top: calc(50% - 128px/2 - 104.16px);
+    z-index: 1;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 65px;
+    text-shadow: 1px 1px 1px #000;
+    color: #FFFFFF;
+
+}
+.content__photo{
+    position: absolute;
+    width: 646.22px;
+    height: 514px;
+    left: 900px;
+    top: 208px;
+
+}
+.content__text__n{
+    position: absolute;
+    width: 30%;
+    height: 366px;
+    left: 1000px;
+    top: 900px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 30px;
+    text-shadow: 1px 1px 1px #000;
+    color: #FFFFFF;
+    z-index: 1;
+
+}
+.content__photo__n img{
+    left: 300px;
+    top: 1200px;
+    position: absolute;
+    width: 800px;
+    height: 600px;
+    border-radius: 15%;
+
+}
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+    background: skyblue;
+}
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
 
